<resources>
    <string name="app_name">Messenger 707</string>
    <string name="message">Message...</string>
    <string name="send">Send</string>

    <!-- Auth screen start -->
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions." </string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="email">Email</string>
    <string name="login">LOG IN</string>
    <string name="create_new_account">Create Account</string>
    <string name="successfully">You have successfully logged in!</string>
    <string name="sign_up">register</string>
    <string name="password_reset">Forgot your password?</string>
    <string name="form_password">password</string>
    <string name="form_email">Email</string>
    <string name="form_user_name">Name</string>
    <!-- Auth screen end -->

    <!-- SettingActivity screen start -->
    <string name="setting">Setting</string>
    <string name="action_search">search</string>
    <string name="dialog_hint">text...</string>
    <string name="bottom_sheet_name">name</string>
    <string name="bottom_sheet_email">email</string>
    <string name="error">Error!</string>
    <string name="sign_out">Sign out</string>
    <string name="contact_msg">message...</string>
    <string name="user_status">\?</string>
    <string name="search_hint">search</string>
    <!-- SettingActivity screen end -->

    <!-- About -->
    <string name="about_title">About</string>
    <string name="about_description"> Messenger 707 \n powered by di-v</string>
    <string name="about_close">close</string>
    <string name="notification_channel_id">msg_channel</string>
    <string name="notification_title">Title</string>
    <string name="msg_ready">Time!</string>
    <string name="preference_notification">Enable message notifications</string>
    <!-- About -->

</resources>
