<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="48dp"
            android:orientation="vertical" >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/auth_user_img"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_face_user"
                android:visibility="gone" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_user_name"
                android:textColorHint="@color/white"
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxBackgroundColor="@color/box_background"
                app:boxStrokeColor="@color/boxStrokeColor"
                app:errorEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/auth_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/form_email"
                android:textColorHint="@color/white"
                android:visibility="gone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxBackgroundColor="@color/box_background"
                app:boxStrokeColor="@color/boxStrokeColor"
                app:errorEnabled="true" >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/auth_text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:hint="@string/form_password"
                android:textColorHint="@color/white"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:boxCornerRadiusBottomStart="@dimen/box_corner_radius"
                app:boxCornerRadiusBottomEnd="@dimen/box_corner_radius"
                app:boxCornerRadiusTopStart="@dimen/box_corner_radius"
                app:boxCornerRadiusTopEnd="@dimen/box_corner_radius"
                app:boxBackgroundColor="@color/box_background"
                app:passwordToggleEnabled="true"
                app:counterEnabled="true"
                app:boxStrokeColor="@color/boxStrokeColor"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/auth_text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:textColor="@color/white"
                android:text="@string/password_reset"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="@dimen/btn_auth_bottom"
                android:background="@drawable/auth_btn_sign_in_style"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/auth_text" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/btn_auth_bottom"
                android:background="@drawable/auth_btn_sign_up_style"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/auth_text" />

            <ProgressBar
                android:id="@+id/progressBar_login"
                android:visibility="gone"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>